--- a/personal.html
+++ b/personal.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Mi Página Personal</title>
+    <title>Presentación</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -40,21 +40,20 @@
     <h1>Hi, soy Alder</h1>
 
     <div class="descripcion">
-        <h2>Dartos de mi:</h2>
-        <p>Me gusta jugar futbot, me gusta escuchar música de todo tipo, actualmente estoy estudiando en la Sanpa la carrera de ingeniería mecatrónica, m
-          Escribe aquí una breve descripción sobre ti. Por ejemplo: "Soy una persona creativa, me encanta aprender cosas nuevas y disfrutar del tiempo con mi familia y amigos."</p>
+        <h2>Datos de mi:</h2>
+        <p>Soy alguien impulsivo, disfruto el jugar con mis amigos, también salir a pasear, comer, relajarse, etc.</p>
     </div>
 
-    <h2>Cosas que me gustan:</h2>
+    <h2>Mis gustos:</h2>
     <ul>
-        <li>Leer libros</li>
-        <li>Escuchar música</li>
-        <li>Programar</li>
-        <li>Jugar videojuegos</li>
+        <li>Jugar: Futbol y Videojuegos</li>
+        <li>Indagar datos interesante</li>
+        <li>Hacer manualidades</li>
+        <li>Escuchar casi todo tipo de música</li>
     </ul>
 
     <footer>
-        &copy; 2025 Todos los derechos reservados.
+        Alder; 2025 derechos reservados.
     </footer>
 
 </body>
