--- a/personal.html
+++ b/personal.html
@@ -12,7 +12,7 @@
         }
 
         .descripcion {
-            background-color: #ffffff;
+            background-color: #0000FF;
             border: 2px solid #cccccc;
             border-radius: 10px;
             padding: 20px;
@@ -53,7 +53,7 @@
     </ul>
 
     <footer>
-        Alder; 2025 derechos reservados.
+        &copy; Alder 2025 derechos reservados.
     </footer>
 
 </body>
