--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Mi Página Personal</title>
+    <title>Presentación</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -12,7 +12,7 @@
         }
 
         .descripcion {
-            background-color: #ffffff;
+            background-color: #0000FF;
             border: 2px solid #cccccc;
             border-radius: 10px;
             padding: 20px;
@@ -37,19 +37,19 @@
 </head>
 <body>
 
-    <h1>Hola, soy [Tu Nombre Aquí]</h1>
+    <h1>Hi, soy Alder</h1>
 
     <div class="descripcion">
-        <h2>Sobre mí</h2>
-        <p>Escribe aquí una breve descripción sobre ti. Por ejemplo: "Soy una persona creativa, me encanta aprender cosas nuevas y disfrutar del tiempo con mi familia y amigos."</p>
+        <h2>Datos de mi:</h2>
+        <p>Soy alguien impulsivo, disfruto el jugar con mis amigos, también salir a pasear, comer, relajarse, etc.</p>
     </div>
 
-    <h2>Cosas que me gustan:</h2>
+    <h2>Mis gustos:</h2>
     <ul>
-        <li>Leer libros</li>
-        <li>Escuchar música</li>
-        <li>Programar</li>
-        <li>Jugar videojuegos</li>
+        <li>Jugar: Futbol y Videojuegos</li>
+        <li>Indagar datos interesante</li>
+        <li>Hacer manualidades</li>
+        <li>Escuchar casi todo tipo de música</li>
     </ul>
 
     <footer>
