--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
             max-width: 600px;
             text-align: left;
         }
+        .descripcion {
+            background-color: #0000FF;
+            border: 2px solid #cccccc;
+            border-radius: 10px;
+            padding: 20px;
+            margin: 20px auto;
+            max-width: 600px;
+            text-align: left;
+        }
+
 
         ul {
             list-style-type: square;
