--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
             max-width: 600px;
             text-align: left;
         }
+        <meta charset="UTF-8">
+    <title>Presentación</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f0f0f0;
+            padding: 40px;
+        }
+
         .descripcion {
             background-color: #0000FF;
             border: 2px solid #cccccc;
